--- a/.github/workflows/rel/release-security.yml
+++ b/.github/workflows/rel/release-security.yml
@@ -1,6 +1,15 @@
-name: Security Release After PR Merge
+name: 🔒 Security Release After PR Merge
 
-# This workflow creates a GitHub Release when a security patch PR is merged
+# Description: This workflow automatically creates a GitHub Release when a security patch
+# pull request is merged into the main branch. It extracts the version number from the
+# security patch branch name and creates a properly tagged release.
+#
+# Triggers:
+# - Automatically when a pull request with a branch name starting with 'security/patch-' is merged to main
+#
+# Permissions:
+# - contents:write - Required to create GitHub releases
+
 on:
   pull_request:
     types: [closed]
