chore: add GenerateResourceUsePreserializedResources tag in csproj files for compatibility with release-build workflow

--- a/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
+++ b/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
@@ -7,6 +7,7 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <NoWarn>NU1701;NETSDK1086;MSB3243</NoWarn>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
   </PropertyGroup>
   
   <PropertyGroup>
