--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -54,9 +54,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@3447fd6a9f9e57506b15f895c5b76d3b197dc7c2 # v4
       with:
-        dotnet-version: |
-          7.0.x
-          8.0.x
+        dotnet-version: 7.0.x
     
     - name: Setup .NET Framework
       shell: pwsh
@@ -68,20 +66,21 @@ jobs:
     - name: Configure NuGet Sources
       shell: pwsh
       run: |
-        # Remove existing sources if they exist
+        # List current sources
+        Write-Host "Current NuGet sources:"
+        dotnet nuget list source
+        
+        # Add Rhino source if not already present
         $sources = dotnet nuget list source
-        if ($sources -match "nugetSource") {
-            dotnet nuget remove source nugetSource
-        }
-        if ($sources -match "rhinoSource") {
-            dotnet nuget remove source rhinoSource
+        if ($sources -notmatch "https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages") {
+            Write-Host "Adding Rhino NuGet source..."
+            dotnet nuget add source "https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages" -n rhinoSource
+        } else {
+            Write-Host "Rhino NuGet source already exists."
         }
         
-        # Add sources
-        dotnet nuget add source "https://api.nuget.org/v3/index.json" -n nugetSource
-        dotnet nuget add source "https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages" -n rhinoSource
-        
-        # Verify configuration
+        # Verify final configuration
+        Write-Host "Final NuGet sources:"
         dotnet nuget list source
         
     - name: Install ILMerge
