--- a/src/SmartHopper.Components.Test/SmartHopper.Components.Test.csproj
+++ b/src/SmartHopper.Components.Test/SmartHopper.Components.Test.csproj
@@ -8,6 +8,7 @@
     <TargetExt>.gha</TargetExt>
     <NoWarn>NU1701;NETSDK1086</NoWarn>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
   </PropertyGroup>
   
   <PropertyGroup>
