--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -83,39 +83,34 @@ jobs:
         Write-Host "Final NuGet sources:"
         dotnet nuget list source
         
-    - name: Install ILMerge
-      run: |
-        nuget install ILMerge -Version 3.0.41
-        
     - name: Restore dependencies
       run: dotnet restore
       
     - name: Build
       run: dotnet build --no-restore --configuration Release
 
-    - name: Merge Dependencies
+    - name: Create Output Directory
       shell: pwsh
       run: |
-        $outputDir = "merged"
+        $outputDir = "artifacts"
         New-Item -ItemType Directory -Force -Path $outputDir
         
-        # Find the main .gha file and its directory
-        $mainAssembly = Get-ChildItem -Recurse -Filter "*.gha" | Select-Object -First 1
-        $assemblyDir = $mainAssembly.Directory.FullName
+        # Copy all build artifacts to the output directory
+        $buildDir = "bin\${{ github.event.release.tag_name || '0.1.2-alpha' }}\Release"
         
-        # Find ILMerge executable
-        $ilmerge = Get-ChildItem -Recurse -Filter "ilmerge.exe" | Select-Object -First 1
+        # Copy all .gha files and their dependencies
+        Get-ChildItem -Path $buildDir -Recurse -Include "*.gha","*.dll" -Exclude "*Rhino*","*Grasshopper*" | 
+          ForEach-Object {
+            $targetDir = Join-Path $outputDir (Split-Path $_.FullName -Parent).Replace("$buildDir\", "")
+            if (!(Test-Path $targetDir)) {
+              New-Item -ItemType Directory -Force -Path $targetDir
+            }
+            Copy-Item $_.FullName -Destination $targetDir
+          }
         
-        # Get all dependency DLLs except Rhino and Grasshopper
-        $dependencies = Get-ChildItem -Path $assemblyDir -Filter "*.dll" |
-            Where-Object { $_.Name -notmatch "Rhino|Grasshopper" } |
-            ForEach-Object { $_.FullName }
-        
-        # Create space-separated list of dependencies
-        $dependencyList = $dependencies -join " "
-        
-        # Run ILMerge
-        & $ilmerge.FullName /out:"$outputDir/$($mainAssembly.Name)" /targetplatform:"v4" "$($mainAssembly.FullName)" $dependencyList
+        # List all copied files for verification
+        Write-Host "Files copied to artifacts directory:"
+        Get-ChildItem -Path $outputDir -Recurse | Select-Object FullName
 
     - name: Create ZIP Archive
       if: github.event_name == 'release'
@@ -124,14 +119,14 @@ jobs:
       run: |
         $version = "${{ github.event.release.tag_name }}"
         $zipName = "SmartHopper-$version.zip"
-        Compress-Archive -Path (Get-ChildItem -Path merged\*).FullName -DestinationPath $zipName
+        Compress-Archive -Path artifacts -DestinationPath $zipName
         "zip_name=$zipName" >> $env:GITHUB_OUTPUT
 
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4
       with:
         name: plugin-package
-        path: merged/
+        path: artifacts/
         
     - name: Upload Release Asset
       if: github.event_name == 'release'
