--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -117,15 +117,37 @@ jobs:
         Write-Host "Files copied to artifacts directory:"
         Get-ChildItem -Path $outputDir -Recurse | Select-Object FullName
 
-    - name: Create ZIP Archive
+    - name: Create ZIP Archives
       if: github.event_name == 'release'
-      id: create_zip
+      id: create_zips
       shell: pwsh
       run: |
         $version = "${{ github.event.release.tag_name }}"
-        $zipName = "SmartHopper-$version.zip"
-        Compress-Archive -Path artifacts -DestinationPath $zipName
-        echo "zip_name=$zipName" >> $env:GITHUB_OUTPUT
+        $platforms = @{
+          "net48" = "SmartHopper-$version-Rhino7-Windows.zip"
+          "net7.0-windows" = "SmartHopper-$version-Rhino8-Windows.zip"
+          "net7.0" = "SmartHopper-$version-Rhino8-Mac.zip"
+        }
+        
+        $zipPaths = @()
+        
+        foreach ($platform in $platforms.Keys) {
+          $zipName = $platforms[$platform]
+          $platformPath = Join-Path "artifacts" $platform
+          
+          if (Test-Path $platformPath) {
+            Write-Host "Creating zip for $platform: $zipName"
+            # Create zip directly from the platform folder contents (not the folder itself)
+            Compress-Archive -Path "$platformPath\*" -DestinationPath $zipName
+            $zipPaths += $zipName
+          } else {
+            Write-Host "Platform folder $platformPath not found, skipping"
+          }
+        }
+        
+        # Output the zip paths as a JSON array for the next step
+        $zipPathsJson = ConvertTo-Json -InputObject $zipPaths -Compress
+        echo "zip_paths=$zipPathsJson" >> $env:GITHUB_OUTPUT
 
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4
@@ -133,13 +155,35 @@ jobs:
         name: plugin-package
         path: artifacts/
         
-    - name: Upload Release Asset
+    # - name: Upload Windows Rhino7 Release Asset
+    #   if: github.event_name == 'release'
+    #   uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 # v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     upload_url: ${{ github.event.release.upload_url }}
+    #     asset_path: SmartHopper-${{ github.event.release.tag_name }}-Rhino7-Windows.zip
+    #     asset_name: SmartHopper-${{ github.event.release.tag_name }}-Rhino7-Windows.zip
+    #     asset_content_type: application/zip
+        
+    - name: Upload Windows Rhino8 Release Asset
       if: github.event_name == 'release'
       uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 # v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ${{ steps.create_zip.outputs.zip_name }}
-        asset_name: ${{ steps.create_zip.outputs.zip_name }}
+        asset_path: SmartHopper-${{ github.event.release.tag_name }}-Rhino8-Windows.zip
+        asset_name: SmartHopper-${{ github.event.release.tag_name }}-Rhino8-Windows.zip
+        asset_content_type: application/zip
+        
+    - name: Upload Mac Rhino8 Release Asset
+      if: github.event_name == 'release'
+      uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 # v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: SmartHopper-${{ github.event.release.tag_name }}-Rhino8-Mac.zip
+        asset_name: SmartHopper-${{ github.event.release.tag_name }}-Rhino8-Mac.zip
         asset_content_type: application/zip
