feat(aichat): migrated from eto.forms to avalonia for markdown native support

--- a/src/SmartHopper.Core/SmartHopper.Core.csproj
+++ b/src/SmartHopper.Core/SmartHopper.Core.csproj
@@ -37,9 +37,13 @@
     <PackageReference Include="RhinoCommon" Version="8.13.24317.13001">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
-    <PackageReference Include="Markdig" Version="0.35.0" />
-    <PackageReference Include="RestSharp" Version="112.1.0" />
+    <!-- <PackageReference Include="Markdig" Version="0.35.0" /> -->
+    <!-- <PackageReference Include="RestSharp" Version="112.1.0" /> -->
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="Avalonia" Version="11.0.5" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.5" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.5" />
+    <PackageReference Include="Markdown.Avalonia" Version="11.0.2" />
   </ItemGroup>
 
 	<ItemGroup>
