--- a/src/SmartHopper.Components/SmartHopper.Components.csproj
+++ b/src/SmartHopper.Components/SmartHopper.Components.csproj
@@ -31,7 +31,7 @@
     <PackageReference Include="RhinoCommon" Version="8.13.24317.13001">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
-    <!-- <PackageReference Include="System.Resources.Extensions" Version="7.0.0" /> -->
+    <PackageReference Include="System.Resources.Extensions" Version="7.0.0" />
     <!-- <PackageReference Include="Avalonia" Version="11.2.5" />
     <PackageReference Include="Avalonia.Desktop" Version="11.2.5" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.5" />
