--- a/src/SmartHopper.Core/SmartHopper.Core.csproj
+++ b/src/SmartHopper.Core/SmartHopper.Core.csproj
@@ -37,17 +37,16 @@
     <PackageReference Include="RhinoCommon" Version="8.13.24317.13001">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
+    <PackageReference Include="System.Resources.Extensions" Version="7.0.0" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
-    <!-- <PackageReference Include="Eto.Forms" Version="2.7.5" />
-    <PackageReference Include="Eto.Platform.Windows" Version="2.7.5" Condition="$(TargetFramework.Contains('-windows')) or $(TargetFramework.StartsWith('net4'))" />
-    <PackageReference Include="Eto.Platform.Mac64" Version="2.7.5" Condition="$(TargetFramework.Contains('net7.0')) and !$(TargetFramework.Contains('-windows'))" /> -->
+    <PackageReference Include="Eto.Forms" Version="2.8.0" />
+    <PackageReference Include="Eto.Platform.Windows" Version="2.8.0" Condition="$(TargetFramework.Contains('-windows')) or $(TargetFramework.StartsWith('net4'))" />
+    <PackageReference Include="Eto.Platform.Mac64" Version="2.8.0" Condition="!$(TargetFramework.Contains('-windows')) and !$(TargetFramework.StartsWith('net4'))" />
     <!-- <PackageReference Include="Avalonia" Version="11.2.5" />
     <PackageReference Include="Avalonia.Desktop" Version="11.2.5" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.5" />
-    <PackageReference Include="Markdown.Avalonia" Version="11.0.2" />
-    <PackageReference Include="SkiaSharp" Version="3.116.1" />
-    <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="3.116.1" />
-    <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="3.116.1" /> -->
+    <PackageReference Include="Markdown.Avalonia" Version="11.0.3" />
+    <PackageReference Include="Markdown.Avalonia.SyntaxHigh" Version="11.0.3" /> -->
   </ItemGroup>
 
   <ItemGroup>
