--- a/src/SmartHopper.Components/Properties/launchSettings.json
+++ b/src/SmartHopper.Components/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "RH8 - netcore": {
       "commandName": "Executable",
       "executablePath": "C:\\Program Files\\Rhino 8\\System\\Rhino.exe",
-      "commandLineArgs": "/netcore",
+      "commandLineArgs": "/netcore /runscript=\"_Grasshopper\"",
       "environmentVariables": {
         "RHINO_PACKAGE_DIRS": "$(SolutionDir)bin/$(SolutionVersion)/$(Configuration)"
       }
