--- a/.github/actions/version-tools/action.yml
+++ b/.github/actions/version-tools/action.yml
@@ -97,6 +97,8 @@ runs:
           VERSION="${{ steps.get-version.outputs.version }}"
         fi
         
+        echo "Current version from Solution.props: $VERSION"
+        
         # Format version for shields.io by encoding special characters
         ENCODED_VERSION=$(echo "$VERSION" | sed 's/-/--/g' | sed 's/\./%2E/g')
         
@@ -126,40 +128,59 @@ runs:
         VERSION_BADGE="[![Version]($VERSION_BADGE_URL)](https://github.com/architects-toolkit/SmartHopper/releases)"
         STATUS_BADGE="[![Status]($STATUS_BADGE_URL)](https://github.com/architects-toolkit/SmartHopper/releases)"
         
+        echo "New version badge: $VERSION_BADGE"
+        echo "New status badge: $STATUS_BADGE"
+        
         # Update README.md with new badges
         if [[ -f "README.md" ]]; then
           BADGES_CHANGED=false
           
-          # Check if version badge exists and update it
+          # Extract current version from README badge
           if grep -q "\[\!\[Version\]\]" README.md; then
-            # Get current version badge
+            # Extract the current version from the badge URL
             CURRENT_VERSION_BADGE=$(grep "\[\!\[Version\]\]" README.md)
+            echo "Current version badge in README: $CURRENT_VERSION_BADGE"
             
-            # Check if badge needs updating
-            if [[ "$CURRENT_VERSION_BADGE" != "$VERSION_BADGE" ]]; then
+            # Extract just the version number from the current badge
+            CURRENT_VERSION_IN_BADGE=$(echo "$CURRENT_VERSION_BADGE" | grep -oP 'version-\K[^-]*(?=-|-)' | sed 's/%2E/./g' | sed 's/--/-/g')
+            echo "Extracted version from README badge: $CURRENT_VERSION_IN_BADGE"
+            
+            # Compare actual versions, not just badge strings
+            if [[ "$CURRENT_VERSION_IN_BADGE" != "$VERSION" ]]; then
+              echo "Version mismatch: README has '$CURRENT_VERSION_IN_BADGE', Solution.props has '$VERSION'"
               # Use sed to replace the version badge
               sed -i "s|\[\!\[Version\]\](https://img\.shields\.io/badge/version[^)]*)|[![Version]($VERSION_BADGE_URL)|g" README.md
               echo "Updated version badge"
               BADGES_CHANGED=true
             else
-              echo "Version badge already up to date"
+              echo "Version badge already up to date (both have version $VERSION)"
             fi
+          else
+            echo "No version badge found in README"
           fi
           
           # Check if status badge exists and update it
           if grep -q "\[\!\[Status\]\]" README.md; then
             # Get current status badge
             CURRENT_STATUS_BADGE=$(grep "\[\!\[Status\]\]" README.md)
+            echo "Current status badge in README: $CURRENT_STATUS_BADGE"
             
-            # Check if badge needs updating
-            if [[ "$CURRENT_STATUS_BADGE" != "$STATUS_BADGE" ]]; then
+            # Extract the current status from the badge URL
+            CURRENT_STATUS_IN_BADGE=$(echo "$CURRENT_STATUS_BADGE" | grep -oP 'status-\K[^-]*(?=-)')
+            echo "Extracted status from README badge: $CURRENT_STATUS_IN_BADGE"
+            
+            # Compare status values
+            if [[ "$CURRENT_STATUS_IN_BADGE" != "$STATUS" ]]; then
+              echo "Status mismatch: README has '$CURRENT_STATUS_IN_BADGE', should be '$STATUS'"
               # Use sed to replace the status badge
               sed -i "s|\[\!\[Status\]\](https://img\.shields\.io/badge/status[^)]*)|[![Status]($STATUS_BADGE_URL)|g" README.md
               echo "Updated status badge"
               BADGES_CHANGED=true
             else
-              echo "Status badge already up to date"
+              echo "Status badge already up to date (both have status $STATUS)"
             fi
+          else
+            echo "No status badge found in README"
           fi
           
           # Check if badges were changed
