--- a/.github/actions/version-tools/action.yml
+++ b/.github/actions/version-tools/action.yml
@@ -105,7 +105,7 @@ runs:
         # Determine color and status based on version
         if [[ $VERSION == *"-dev"* ]]; then
           COLOR="red"
-          STATUS="Development"
+          STATUS="Unstable Development"
         elif [[ $VERSION == *"-alpha"* ]]; then
           COLOR="orange"
           STATUS="Alpha"
