chore(workflow): new labels and workflows to automate issues

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,8 @@
-name: Bug Report
+name: 🐞 Bug Report
 description: Create a report about something that is not working as expected
 title: "[descriptive title here]"
-labels: ["status: needs review", "type: bug"]
+labels: ["status: needs triage"]
+type: Bug
 assignees: []
 body:
   - type: markdown
