--- a/.github/workflows/block-dev-release-to-main.yml
+++ b/.github/workflows/block-dev-release-to-main.yml
@@ -1,4 +1,14 @@
-name: Block Dev Release to Main
+
+name: 🚫 Block Dev Release to Main
+
+# Description: This workflow blocks development release versions from being merged into the main branch.
+# It checks for the presence of "-dev" in the version number and prevents the merge if found.
+#
+# Trigger: Automatically when a pull request is opened or updated targeting the main branch
+#
+# Permissions:
+# - contents:read - Required to read repository content
+# - pull-requests:read - Required to read pull request information
 
 on:
   pull_request:
