--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,3 +3,6 @@ contact_links:
   - name: Feature Ideas
     url: https://github.com/architects-toolkit/SmartHopper/discussions/categories/ideas
     about: Please suggest new features or improvements in our Discussions under the Ideas category
+  - name: Support
+    url: https://github.com/architects-toolkit/SmartHopper/discussions/categories/q-a
+    about: Please ask questions or get help in our Discussions under the Q&A category
