rector(aifilectx): rename AI Context component to AI File Context

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -74,9 +74,9 @@
 - name: "component: AI GroupTitle"
   color: "000"
   description: "Issues related to the AI GroupTitle component"
-- name: "component: AI Context"
+- name: "component: AI File Context"
   color: "000"
-  description: "Issues related to the AI Context component"
+  description: "Issues related to the AI File Context component"
 - name: "component: AI Chat"
   color: "000"
   description: "Issues related to the Chat component"
