--- a/.github/workflows/github-pr-update-changelog-issues.yml
+++ b/.github/workflows/github-pr-update-changelog-issues.yml
@@ -33,6 +33,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
           
       - name: Update Changelog with Closed Issues
         id: update-changelog-issues
@@ -48,7 +49,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git add CHANGELOG.md
           git commit -m "docs: update changelog with ${{ steps.update-changelog-issues.outputs.issues-added }} closed issues"
-          git push
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
           
           echo "Added ${{ steps.update-changelog-issues.outputs.issues-added }} closed issues to the changelog"
           
@@ -59,6 +60,6 @@ jobs:
           git config --local user.name "GitHub Action"
           git add CHANGELOG.md
           git commit -m "docs: update changelog with ${{ steps.update-changelog-issues.outputs.issues-added }} closed issues"
-          git push
+          git push origin HEAD:${{ github.ref_name }}
           
           echo "Added ${{ steps.update-changelog-issues.outputs.issues-added }} closed issues to the changelog"
