--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.2.0-dev.250406</SolutionVersion>
+    <SolutionVersion>0.2.0-alpha</SolutionVersion>
   </PropertyGroup>
 </Project>
